# fiqo

./: Dockerfile  README.md  docker-compose.yml  pom.xml  prometheus.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
fiqo-backend/: Dockerfile  README.md  pom.xml
fiqo-backend/src/main/resources/: application.yml  banner.txt  messages.properties
fiqo-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
fiqo-cli/fiqo/: client.py  main.py
fiqo-panel/: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  entrypoint.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
fiqo-panel/public/: github-callback-login.html  google-callback-login.html
fiqo-panel/src/: App.tsx  eventsource-polyfill.d.ts  global.d.ts  index.css
fiqo-panel/src/components/UserProfile/: ProfileModal.tsx  UserAccount.tsx  UserAddressCard.tsx  UserInfoCard.tsx  UserMetaCard.tsx
fiqo-panel/src/components/auth/: PassworRecoveryForm.tsx  ResetPasswordForm.tsx  SignInForm.tsx  SignUpForm.tsx
fiqo-panel/src/context/: SidebarContext.tsx  ThemeContext.tsx
fiqo-panel/src/icons/: index.ts
fiqo-panel/src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  Backdrop.tsx  SidebarWidget.tsx
fiqo-panel/src/pages/: Blank.tsx  Calendar.tsx  UserProfiles.tsx
fiqo-panel/src/service/: account-service.ts  alert-service.tsx  auth-service.ts  file-service.ts  notification-service.ts  usage-service.ts  user-service.ts
fiqo-panel/src/types/: file-manager.d.ts
fiqo-panel/src/utils/: utils.ts
src/main/resources/: application.yml  messages.properties
(+189 files in other folders)
